force-app/main/default/objects/DRC_NBC_Invoice__c/DRC_NBC_Invoice__c.object-meta.xml
<CustomObject>
    <label>Invoice</label>
    <nameField>
        <displayFormat>Inv-{0000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>