force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Account__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>