force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Acknowledgement_Date1__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Acknowledgement_Date1__c</fullName>
    <label>Acknowledgement Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>