force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Acknowledgement_Date__c</fullName>
    <label>Acknowledgement Date</label>
    <type>DateTime</type>
</CustomField>