force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Acknowledgement_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Acknowledgement_Number__c</fullName>
    <label>Acknowledgement Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>