force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Case__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Invoice</relationshipLabel>
    <relationshipName>Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>