force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Delivery_Location__c</fullName>
    <label>Delivery Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>