force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_External_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_External_Document_Number__c</fullName>
    <label>External Document Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>