force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>