force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Invoice_DRC_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Invoice_DRC_Code__c</fullName>
    <externalId>true</externalId>
    <label>Invoice DRC Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>