force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Invoice_Due_Date__c</fullName>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>