force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_IRN_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_IRN_Number__c</fullName>
    <label>IRN Number</label>
    <length>70</length>
    <type>Text</type>
</CustomField>