force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Order_Number__c</fullName>
    <label>Order Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>