force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDC90</fullName>
            </value>
            <value>
                <fullName>PDC60</fullName>
            </value>
            <value>
                <fullName>PDC45</fullName>
            </value>
            <value>
                <fullName>PDC30</fullName>
            </value>
            <value>
                <fullName>IRRELC</fullName>
            </value>
            <value>
                <fullName>IRRLC90</fullName>
            </value>
            <value>
                <fullName>IRRLC60</fullName>
            </value>
            <value>
                <fullName>IRRLC45</fullName>
            </value>
            <value>
                <fullName>IRRLC30</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>DPSIGHT</fullName>
            </value>
            <value>
                <fullName>DP90</fullName>
            </value>
            <value>
                <fullName>DP60</fullName>
            </value>
            <value>
                <fullName>DP30</fullName>
            </value>
            <value>
                <fullName>DA90</fullName>
            </value>
            <value>
                <fullName>DA60</fullName>
            </value>
            <value>
                <fullName>DA45</fullName>
            </value>
            <value>
                <fullName>DA30</fullName>
            </value>
            <value>
                <fullName>BONTRN</fullName>
            </value>
            <value>
                <fullName>BL90</fullName>
            </value>
            <value>
                <fullName>BL75</fullName>
            </value>
            <value>
                <fullName>BL60</fullName>
            </value>
            <value>
                <fullName>BL45</fullName>
            </value>
            <value>
                <fullName>BL30</fullName>
            </value>
            <value>
                <fullName>BL120</fullName>
            </value>
            <value>
                <fullName>INV90</fullName>
            </value>
            <value>
                <fullName>INV75</fullName>
            </value>
            <value>
                <fullName>70ADV-30CD</fullName>
            </value>
            <value>
                <fullName>INV07</fullName>
            </value>
            <value>
                <fullName>LR60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>