force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Shipped_To_DRC_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipped_To_DRC_Customer_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipped To (DRC Customer Code)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice (Shipped To (DRC Customer Code))</relationshipLabel>
    <relationshipName>Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>