force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>