force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Shipping_State_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Shipping_State_Code__c</fullName>
    <label>Shipping State Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>