force-app/main/default/objects/DRC_NBC_Invoice__c/fields/DRC_NBC_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Vehicle_Number__c</fullName>
    <label>Vehicle Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>