force-app/main/default/objects/DRC_NBC_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DRC_NBC_Invoice_Number__c</columns>
    <columns>DRC_NBC_Order__c</columns>
    <columns>DRC_NBC_Account__c</columns>
    <columns>DRC_NBC_Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>